--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="plugin Manager">
 	<main>
-		<h1 class="text-red-400">Welcome to <span>Gena</span></h1>
+		<h1 class="text-green-400">Welcome to <span>Gena</span></h1>
 		<p class="text-gray-900 dark:text-slate-100">Docs comming soon...</p>
 	</main>
 </Layout>
