--- a/src/style/global.css
+++ b/src/style/global.css
@@ -5,8 +5,8 @@
  */
 
  :root {
-	--accent: #8132ff;
-	--accent-dark: #40008a;
+	--accent: #36e68e;
+	--accent-dark: #008a39;
 	--black: 15, 18, 25;
 	--gray: 96, 115, 159;
 	--gray-light: 229, 233, 240;
