--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,15 +7,19 @@
 //   homeLink: string;
 // }
 
+import astroConfig from "../../astro.config.mjs";
+
 // Or you can hardcode the links
 const githubUrl = "https://github.com/your-username/your-repo";
-const homeLink = "/"; // Update this with the actual home page link
+const homeLink = ""; 
+
+const {base} = astroConfig;
 ---
 
 <header class=" sticky top-0 flex items-center justify-between p-4 py-1 border-b bg-white shadow-sm dark:bg-gray-800 z-30 dark:border-gray-700">
   <div class="flex items-center">
-    <a href={homeLink}>
-      <img src="/icon.png" alt="Logo" class="w-10 h-10 mr-2" />
+    <a href={`${base ?? ''}/${homeLink}`}>
+      <img src="/icon.svg" alt="Logo" class="w-10 h-10 mr-2" />
     </a>
   </div>
   <div class="flex items-center justify-between gap-4">
