--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -10,8 +10,8 @@ const { outline } = Astro.props;
   <ul class="space-y-2">
     {
       outline && outline.map((item) => (
-        <li class="pl-2 border-l-2 border-gray-400">
-          <a href={"#" + item} class="block py-1 hover:text-purple-500">
+        <li class="pl-2 border-l-2 border-gray-400 hover:border-green-400">
+          <a href={"#" + item} class="block py-1 hover:text-green-500">
             {item}
           </a>
         </li>
