--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Sidebar from '../components/Sidebar.astro';
 import Header from '../components/Header.astro';
 import List from '../components/list.astro';
+import BaseHeader from '../components/baseHeader.astro';
 interface Props {
   title: string;
   outline: string[];
@@ -13,14 +14,7 @@ let { outline } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-  </head>
+  <BaseHeader {title}/> 
   <body class="scroll-smooth dark:bg-gray-800 dark:text-white">
     <Header />
     <div class="flex min-h-screen">
