--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import List from '../components/list.astro';
 import BaseHeader from '../components/baseHeader.astro';
 interface Props {
   title: string;
-  outline: string[];
+  outline: any;
 }
 
 const { title } = Astro.props;
