--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,42 +1,43 @@
 ---
-import { sidebarStructure } from '../content.ts'
-import astroConfig from "../../astro.config.mjs";
+import { sidebarStructure } from "../content";
+import { base } from "../content";
 
-const {base} = astroConfig;
-const {slug} = Astro.params;
---- 
+const { slug } = Astro.params;
+---
 
 <div class="sidebar p-8 w-full h-full overflow-y-auto">
   <ul class="space-y-2">
-    {sidebarStructure.map((item) => (
-      <>
-        <li>
-          <h5 
-          class="mb-3 text-sm font-semibold text-slate-900 dark:text-slate-200"
-          >{item.label}</h5>
-
-        </li>
-        {item.children && (
-          <ul class="space-y-1">
-            {item.children.map((child) => (
-              <li class={child.label === slug ? 'active' : ''}>
-                <a
-                  href={`${base ?? ''}/${child.path}`}
-                  class="block py-1 pl-4 text-sm hover:text-green-500 border-l-2 border-gray-200 hover:border-green-400"
-                >
-                  {child.label}
-                </a>
-              </li>
-            ))}
-          </ul>
-        )}
-      </>
-    ))}
+    {
+      sidebarStructure.map((item) => (
+        <>
+          <li>
+            <h5 class="mb-3 text-sm font-semibold text-slate-900 dark:text-slate-200">
+              {item.label}
+            </h5>
+          </li>
+          {item.children && (
+            <ul class="space-y-1">
+              {item.children.map((child) => (
+                <li class={child.label === slug ? "active" : ""}>
+                  <a
+                    href={(base ?? "") + "/" + child.path}
+                    class="block py-1 pl-4 text-sm hover:text-green-500 border-l-2 border-gray-200 dark:border-gray-600
+                     hover:border-green-400"
+                  >
+                    {child.label}
+                  </a>
+                </li>
+              ))}
+            </ul>
+          )}
+        </>
+      ))
+    }
   </ul>
 </div>
 
 <style>
-  .active a{
+  .active a {
     @apply text-green-500 border-l-2 border-green-400;
   }
 </style>
