--- a/src/components/baseHeader.astro
+++ b/src/components/baseHeader.astro
@@ -1,10 +1,9 @@
 ---
-import astroConfig from "../../astro.config.mjs";
 interface Props {
   title: string;
 }
 
-const { base } = astroConfig;
+import { base } from '../content';
 const { title } = Astro.props;
 ---
 
@@ -12,7 +11,7 @@ const { title } = Astro.props;
   <meta charset="UTF-8" />
   <meta name="description" content="Astro description" />
   <meta name="viewport" content="width=device-width" />
-  <link rel="icon" type="image/svg" href={`${base ?? ''}/favicon.svg`} />
+  <link rel="icon" type="image/svg" href={(base ?? '') + "/favicon.svg"} />
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
 </head>
