--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -38,6 +38,6 @@ const { slug } = Astro.params;
 
 <style>
   .active a {
-    @apply text-green-500 border-l-2 border-green-400;
+    @apply text-green-500 border-l-2 border-green-400 dark:border-green-200;
   }
 </style>
