--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -6,6 +6,9 @@ interface Props {
 const { outline } = Astro.props;
 ---
 
+<script>
+  // client script
+</script>
 <div class="sidebar p-4 w-full h-full">
   <ul class="space-y-2">
     {
@@ -19,3 +22,7 @@ const { outline } = Astro.props;
     }
   </ul>
 </div>
+
+<style>
+
+</style>
