--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,63 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseHeader from "../components/baseHeader.astro";
+import Header from "../components/Header.astro";
+
 ---
 
-<Layout title="plugin Manager">
-	<main>
-		<h1 class="text-green-400">Welcome to <span>Gena</span></h1>
-		<p class="text-gray-900 dark:text-slate-100">Docs comming soon...</p>
-	</main>
-</Layout>
-
+<BaseHeader  title="Gena documentation template"/>
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-</style>
+    .hero {
+      background-color: #f9fafb;
+      @apply dark:bg-gray-800;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      font-weight: bold;
+      color: #1a202c;
+    }
+
+    .hero p {
+      font-size: 1.5rem;
+      color: #4a5568;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 1rem 2rem;
+      background-color: #4b5563;
+      color: #fff;
+      font-size: 1.5rem;
+      font-weight: bold;
+      border-radius: 0.5rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn:hover {
+      @apply bg-green-500;
+    }
+
+    .image {
+  
+      background-color: #f9fafb;
+      background-image: url('/icon.svg');
+      background-size: cover;
+      background-position: center;
+      height: calc(100vh - 50px);
+    }
+  </style>
+
+
+<Header/>
+  <div class="flex flex-col md:flex-row">
+    <div class="image w-full md:w-1/2 dark:bg-gray-800"></div>
+    <div class="hero w-full md:w-1/2 flex items-center justify-center px-4 py-8 md:px-8 md:py-16">
+      <div class="text-center">
+        <h1 class="mb-4 dark:text-slate-200">Gena Docs Template</h1>
+        <p class="mb-8 dark:text-slate-500">this is an already setup template to help you create docs faster.</p>
+        <a href="./docs/introduction" class="btn bg-green-300">Get Started</a>
+      </div>
+
+      
+    </div>
+  </div>
