--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,6 +27,7 @@ const homeLink = "";
   <div class="flex items-center justify-between gap-4">
     <a
       id="dark-mode-toggle"
+      title="Toggle dark mode"
       class="flex items-center p-1 rounded-full hover:bg-gray-200 dark:text-gray-50 dark:bg-gray-800"
       href="javascript:;"
     >
@@ -47,6 +48,7 @@ const homeLink = "";
       href={githubUrl}
       target="_blank"
       rel="noopener noreferrer"
+      title="Github"
       class="flex items-center p-1 rounded-full hover:bg-gray-200 dark:text-gray-50 dark:bg-gray-800"
     >
       <svg
