--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -12,17 +12,16 @@ const { outline } = Astro.props;
 <div class="sidebar p-4 w-full h-full">
   <ul class="space-y-2">
     {
-      outline && outline.map((item) => (
-        <li class="pl-2 border-l-2 border-gray-400 hover:border-green-400">
-          <a href={"#" + item} class="block py-1 hover:text-green-500">
-            {item}
-          </a>
-        </li>
-      ))
+      outline &&
+        outline.map((item) => (
+          <li class="pl-2 border-l-2 border-gray-400 hover:border-green-400">
+            <a href={"#" + item} class="block py-1 hover:text-green-500">
+              {item.split("-").join(" ")}
+            </a>
+          </li>
+        ))
     }
   </ul>
 </div>
 
-<style>
-
-</style>
+<style></style>
