--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -22,7 +22,7 @@ const { slug } = Astro.params;
                   <a
                     href={(base ?? "") + "/" + child.path}
                     class="block py-1 pl-4 text-sm hover:text-green-500 border-l-2 border-gray-200 dark:border-gray-600
-                     hover:border-green-400"
+                     hover:!border-green-400"
                   >
                     {child.label}
                   </a>
@@ -38,6 +38,6 @@ const { slug } = Astro.params;
 
 <style>
   .active a {
-    @apply text-green-500 border-l-2 border-green-400 hover:border-green-400;
+    @apply text-green-500 border-l-2 !border-green-500;
   }
 </style>
