--- a/src/components/breadNav.astro
+++ b/src/components/breadNav.astro
@@ -2,7 +2,7 @@
 const { slug } = Astro.params;
 ---
 
-<nav class="text-sm font-medium my-3 text-gray-500" aria-label="Breadcrumb">
+<nav class="text-sm font-medium my-3 lg:hidden text-gray-500" aria-label="Breadcrumb">
   <ol class="list-none p-0 inline-flex">
     <li class="flex items-center">
       <a href="./" class="!text-green-400 hover:!text-green-500">overview</a>
