--- a/src/style/global.css
+++ b/src/style/global.css
@@ -31,7 +31,7 @@ body {
 main {
 	width: 720px;
 	max-width: 100%;
-	padding: 3em 0 0 0;
+	padding: 2em 0 0 0;
 }
 .content h1,
 .content h2,
@@ -73,6 +73,7 @@ main {
 }
 .content a:hover {
 	color: var(--accent);
+	@apply underline;
 }
 .content p {
 	margin-bottom: 1em;
