--- a/src/style/global.css
+++ b/src/style/global.css
@@ -77,7 +77,7 @@ main {
 }
 .content p {
 	margin-bottom: 1em;
-    @apply mt-2 text-lg text-gray-500 dark:text-gray-400;
+    @apply mt-2 text-lg text-gray-500 dark:text-slate-500;
 }
 .content .prose p {
 	margin-bottom: 2em;
